--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,18 @@ pnpm-debug.log*
 
 # folders and files
 ignore/
+
+# Python
+.venv/
+venv/
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+
+# Agent configuration
+.agents/
+
+# Build logs
+build_log.txt
